; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/iseries/extr_htab.c_iSeries_hpte_find.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/iseries/extr_htab.c_iSeries_hpte_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_pte = type { i32 }

@HPTE_V_VALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @iSeries_hpte_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @iSeries_hpte_find(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.hash_pte, align 4
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = call i64 @HvCallHpt_findValid(%struct.hash_pte* %3, i64 %5)
  store i64 %6, i64* %4, align 8
  %7 = getelementptr inbounds %struct.hash_pte, %struct.hash_pte* %3, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @HPTE_V_VALID, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %1
  %13 = load i64, i64* %4, align 8
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %12
  %16 = load i64, i64* %4, align 8
  %17 = and i64 %16, 9223372036854775807
  store i64 %17, i64* %4, align 8
  %18 = load i64, i64* %4, align 8
  %19 = sub nsw i64 0, %18
  store i64 %19, i64* %4, align 8
  br label %20

20:                                               ; preds = %15, %12
  br label %22

21:                                               ; preds = %1
  store i64 -1, i64* %4, align 8
  br label %22

22:                                               ; preds = %21, %20
  %23 = load i64, i64* %4, align 8
  ret i64 %23
}

declare dso_local i64 @HvCallHpt_findValid(%struct.hash_pte*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
